@@ -3,6 +3,7 @@ package br.com.fiap.apitshirtsale.domain.TShirt;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/tshirts")
@@ -16,7 +17,7 @@ public class TShirtController {
 
     @GetMapping
     public List<TShirtResponse> getAllTShirts() {
-        return TShirtService.getAllTShirts().stream().map(TShirtResponse::fromModel).toList();
+        return TShirtService.getAllTShirts().stream().map(TShirtResponse::fromModel).collect(Collectors.toList());
     }
 
     @GetMapping("{id}")
